# qr-site

./: .gitignore  Dockerfile  LICENSE.txt  README.md  conf.json  docker-compose.yml  pyproject.toml
src/qr_site/: __about__.py  __init__.py  __main__.py  config.py  logs.py  main.py
src/qr_site/static/: style.css
src/qr_site/static/css/: theme.css
src/qr_site/static/js/: main.js
src/qr_site/static/js/modules/: uploads.js
src/qr_site/templates/: index.html  login.html  request_access.html
